
PUBLIC_HEADER_FILES = \
	fitsfile.h \
	fitshead.h \
	lwcs.h \
	wcscat.h \
	wcs.h \
	wcslib.h

lib_LIBRARIES = libwcs.a

libwcs_a_SOURCES = \
	$(PUBLIC_HEADER_FILES) \
	actread.c \
	binread.c \
	catutil.c \
	cel.c \
	ctgread.c \
	daoread.c \
	dateutil.c \
	distort.c \
	dsspos.c \
	fileutil.c \
	findstar.c \
	fitsfile.c \
	fitswcs.c \
	gsc2read.c \
	gscread.c \
	hget.c \
	hput.c \
	iget.c \
	imgetwcs.c \
	imhfile.c \
	imio.c \
	imrotate.c \
	imsetwcs.c \
	imutil.c \
	lin.c \
	matchstar.c \
	platefit.c \
	platepos.c \
	proj.c \
	sdssread.c \
	skybotread.c \
	sortstar.c \
	sph.c \
	tabread.c \
	tmcread.c \
	tnxpos.c \
	ty2read.c \
	uacread.c \
	ubcread.c \
	ucacread.c \
	ujcread.c \
	wcs.c \
	wcscon.c \
	wcsinit.c \
	wcslib.c \
	wcstrig.c \
	webread.c \
	worldpos.c

# public headers to include in 'make install' target 
include_HEADERS = $(PUBLIC_HEADER_FILES)

